--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -29,8 +29,26 @@
     <ListView
         android:id="@+id/listViewComments"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="430dp"
         android:layout_below="@id/blogBody"
         android:layout_marginTop="10dp"
         />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="310dp"
+        android:layout_height="wrap_content"
+        android:text="ENTER A COMMENT"
+        android:layout_below="@id/listViewComments"
+        />
+    <Button
+        android:id="@+id/postButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Post"
+        android:layout_toRightOf="@id/editText"
+        android:layout_below="@id/listViewComments"
+        android:clickable="true"/>
+
+
 </RelativeLayout>
